# GNN_Notebooks

./: 0 - Graph Basics and Algorithms.ipynb  1 - Graph Level Regression.ipynb  2 - Node Classification.ipynb  3 - Link Prediction.ipynb  Graph Level Regression.ipynb  pyproject.toml  requirements.txt
