[project]
name = "gnn-notebooks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "numpy==1.26.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "rdkit==2025.9.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
